# Hive Mariachi Engine
# Copyright (C) 2008 Hive Solutions Lda.
#
# This file is part of Hive Mariachi Engine.
#
# Hive Mariachi Engine is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hive Mariachi Engine is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Hive Mariachi Engine. If not, see <http:#www.gnu.org/licenses/>.

# __author__    = João Magalhães <joamag@hive.pt>
# __version__   = 1.0.0
# __revision__  = $LastChangedRevision: 2390 $
# __date__      = $LastChangedDate: 2009-04-02 08:36:50 +0100 (qui, 02 Abr 2009) $
# __copyright__ = Copyright (c) 2008 Hive Solutions Lda.
# __license__   = GNU General Public License (GPL), Version 3

include $(top_srcdir)/Common.am

lib_LIBRARIES = libbullet.a

libullet_a_CFLAGS = $(AM_CFLAGS)
libullet_a_CXXFLAGS = $(AM_CXXFLAGS)

libbullet_a_SOURCES = SphereTriangleDetector.cpp \
btActivatingCollisionAlgorithm.cpp \
btAlignedAllocator.cpp \
btAxisSweep3.cpp \
btBoxBoxCollisionAlgorithm.cpp \
btBoxBoxDetector.cpp \
btBoxShape.cpp \
btBroadphaseProxy.cpp \
btBvhTriangleMeshShape.cpp \
btCapsuleShape.cpp \
btCollisionAlgorithm.cpp \
btCollisionDispatcher.cpp \
btCollisionObject.cpp \
btCollisionShape.cpp \
btCollisionWorld.cpp \
btCompoundCollisionAlgorithm.cpp \
btCompoundShape.cpp \
btConcaveShape.cpp \
btConeShape.cpp \
btConeTwistConstraint.cpp \
btContactConstraint.cpp \
btContactProcessing.cpp \
btContinuousConvexCollision.cpp \
btContinuousDynamicsWorld.cpp \
btConvexCast.cpp \
btConvexConcaveCollisionAlgorithm.cpp \
btConvexConvexAlgorithm.cpp \
btConvexHull.cpp \
btConvexHullShape.cpp \
btConvexInternalShape.cpp \
btConvexPlaneCollisionAlgorithm.cpp \
btConvexPointCloudShape.cpp \
btConvexShape.cpp \
btConvexTriangleMeshShape.cpp \
btCylinderShape.cpp \
btDbvt.cpp \
btDbvtBroadphase.cpp \
btDefaultCollisionConfiguration.cpp \
btDiscreteDynamicsWorld.cpp \
btDispatcher.cpp \
btEmptyCollisionAlgorithm.cpp \
btEmptyShape.cpp \
btGImpactBvh.cpp \
btGImpactCollisionAlgorithm.cpp \
btGImpactQuantizedBvh.cpp \
btGImpactShape.cpp \
btGeneric6DofConstraint.cpp \
btGeneric6DofSpringConstraint.cpp \
btGenericPoolAllocator.cpp \
btGeometryUtil.cpp \
btGhostObject.cpp \
btGjkConvexCast.cpp \
btGjkEpa2.cpp \
btGjkEpaPenetrationDepthSolver.cpp \
btGjkPairDetector.cpp \
btHeightfieldTerrainShape.cpp \
btHinge2Constraint.cpp \
btHingeConstraint.cpp \
btKinematicCharacterController.cpp \
btManifoldResult.cpp \
btMinkowskiPenetrationDepthSolver.cpp \
btMinkowskiSumShape.cpp \
btMultiSapBroadphase.cpp \
btMultiSphereShape.cpp \
btMultimaterialTriangleMeshShape.cpp \
btOptimizedBvh.cpp \
btOverlappingPairCache.cpp \
btPersistentManifold.cpp \
btPoint2PointConstraint.cpp \
btPolyhedralConvexShape.cpp \
btQuantizedBvh.cpp \
btQuickprof.cpp \
btRaycastCallback.cpp \
btRaycastVehicle.cpp \
btRigidBody.cpp \
btScaledBvhTriangleMeshShape.cpp \
btSequentialImpulseConstraintSolver.cpp \
btShapeHull.cpp \
btSimpleBroadphase.cpp \
btSimpleDynamicsWorld.cpp \
btSimulationIslandManager.cpp \
btSliderConstraint.cpp \
btSoftBody.cpp \
btSoftBodyConcaveCollisionAlgorithm.cpp \
btSoftBodyHelpers.cpp \
btSoftBodyRigidBodyCollisionConfiguration.cpp \
btSoftRigidCollisionAlgorithm.cpp \
btSoftRigidDynamicsWorld.cpp \
btSoftSoftCollisionAlgorithm.cpp \
btSolve2LinearConstraint.cpp \
btSphereBoxCollisionAlgorithm.cpp \
btSphereShape.cpp \
btSphereSphereCollisionAlgorithm.cpp \
btSphereTriangleCollisionAlgorithm.cpp \
btStaticPlaneShape.cpp \
btStridingMeshInterface.cpp \
btSubSimplexConvexCast.cpp \
btTetrahedronShape.cpp \
btTriangleBuffer.cpp \
btTriangleCallback.cpp \
btTriangleIndexVertexArray.cpp \
btTriangleIndexVertexMaterialArray.cpp \
btTriangleMesh.cpp \
btTriangleMeshShape.cpp \
btTriangleShapeEx.cpp \
btTypedConstraint.cpp \
btUniformScalingShape.cpp \
btUnionFind.cpp \
btUniversalConstraint.cpp \
btVoronoiSimplexSolver.cpp \
btWheelInfo.cpp

